project/test/semantics/good/input/Good40_shouldGenerateProperEqualsForLists.ty
singleton class GenericTypes {
    
    actions: {
        main: () -> Void = {
            val list1: List[Int] = List[Int](3, 4, 222, 5);
            val list2: List[Int] = List[Int](3, 4, 222);
            val list3: List[Int] = List[Int](3, 4, 888, 929);
            val list4: List[Int] = List[Int](3, 2 + 2, 222, 5);
            
            System#assert(list1 != list2)
            System#assert(list1 != list3)
            System#assertEquals(list1, list4)
        }
    }
}
